consul-vault/sit-sg/ingress-sit-sg.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
  labels:
    app: vault
    env: sit-sg
spec:
  rules:
  - host: "vault.sit.sg.privemanagers.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: vault-deploy-ui
          servicePort: 8200
  - host: "consul.sit.sg.privemanagers.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: vault-deploy-consul-ui
          servicePort: 80
